--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1>My name is</h1>
-        <p>INZAMA ROBIN</p>
-        <img src="images/INZAMA.jpg" alt="And thats how i look"
+        <p><em>INZAMA ROBIN</em> i have many A.K.As but yes,stories for other days,right.
+            So lets delve deeper into who i am in the academic side of things. By the way, the picture below 
+            is what i look like, stare at it, imagine what i was thinking hahaha.</p>
+        <img src="images/INZAMA.jpg" alt="And thats how i look">
+        
 
     </body>
 </html>
