--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     </head>
     <body>
         <h1>My name is</h1>
-        <p><em>INZAMA ROBIN</em> i have many A.K.As but yes,stories for other days,right.
+        <p class="author"><em>INZAMA ROBIN</em> i have many A.K.As but yes,stories for other days,right.
             So lets delve deeper into who i am in the academic side of things. By the way, the picture below 
             is what i look like, stare at it, imagine what i was thinking hahaha.</p>
         <img src="images/INZAMA.jpg" alt="And thats how i look">
-        
+        <h2> LIST OF PROJECTS</h2>
+        <p>This are some of the projects that i have been working on. abrief description is also attached to each project listed respectively</p>
+        <ul>
+        <li><a href="https://github.com/INZAMA-bot/hello-world.git">link to my first project</a></ul></li>
+        <p>This happened to be my very first project on git and github..the phrase "hello world" tells it all, to those who understand tech history</p>
+        <li><a href="https://github.com/INZAMA-bot/start-now.git">link to freestyle project</a></li>
+        <p>So while i was learning and confronting alot of blockers, this project was away to navigate my way through.</p>
+        <li><a href="https://github.com/INZAMA-bot/with-vscode.git">link visualcode studio trail</a></li>
+        <p>Afriend introduced me to visualcode studio, i was stranded while using atom, this project was totally about viewing how visualcode studio works</p>
+        </ul>
 
     </body>
 </html>
