conclusion line for links

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <h1>My name is</h1>
-        <p class="author"><em>INZAMA ROBIN</em> i have many A.K.As but yes,stories for other days,right.
-            So lets delve deeper into who i am in the academic side of things. By the way, the picture below 
+        <h1>My name </h1>
+        <p>Is<em>iINZAMA ROBIN</em> i have many A.K.As but yes,stories for other days,right.
+            So lets delve deeper into who i am in the academic side of things. By the way, the picture below
             is what i look like, stare at it, imagine what i was thinking hahaha.</p>
         <img src="images/INZAMA.jpg" alt="And thats how i look">
         <h2> LIST OF PROJECTS</h2>
@@ -20,6 +20,7 @@
         <li><a href="https://github.com/INZAMA-bot/with-vscode.git">link visualcode studio trail</a></li>
         <p>Afriend introduced me to visualcode studio, i was stranded while using atom, this project was totally about viewing how visualcode studio works</p>
         </ul>
+        <p>This are the projects i have so far had achance to explore with the world of coding</p>
 
     </body>
 </html>
